--- a/admin/src/app/features/service/service-list/service-list.component.html
+++ b/admin/src/app/features/service/service-list/service-list.component.html
@@ -1,1 +1,50 @@
-<p>service-list works!</p>
+<div class="table-header">
+  <div>STT</div>
+  <div>Tên dịch vụ</div>
+  <div>Hình ảnh</div>
+  <div>Mô tả</div>
+  <div>Ngày tạo</div>
+  <div>Trạng thái</div>
+  <div>Hành động</div>
+</div>
+
+<div *ngFor="let service of services; let i = index" class="table-row">
+  <div>{{ (filter.page - 1) * filter.limit + i + 1 }}</div>
+  <div>
+    {{ service.name }}
+  </div>
+  <div class="image-list">
+    <img
+      *ngIf="service.image"
+      [src]="getImageUrl(service.image)"
+      [alt]="service.name"
+      width="200"
+      height="200"
+      class="tw-w-full tw-h-auto tw-rounded"
+    />
+  </div>
+  <div>
+    {{ service.description || "Chưa có mô tả" }}
+  </div>
+  <div>
+    {{ service.createdAt | formatDate }}
+  </div>
+  <div class="status-column">
+    <label class="switch">
+      <input
+        type="checkbox"
+        [checked]="service.status"
+        (change)="toggleStatus.emit({$event, service})"
+      />
+      <span class="slider"></span>
+    </label>
+  </div>
+  <div class="actions">
+    <button class="icon-button" (click)="viewDetail.emit(service)">
+      <i class="fas fa-eye"></i>
+    </button>
+    <button class="icon-button" (click)="openEdit.emit(service)">
+      <i class="fas fa-pen"></i>
+    </button>
+  </div>
+</div>
