--- a/admin/src/app/shared/components/header/header.component.html
+++ b/admin/src/app/shared/components/header/header.component.html
@@ -312,7 +312,7 @@
                     <h4>Hizrian</h4>
                     <p class="text-muted"></p>
                     <a
-                      href="profile.html"
+                      href="admin/profile"
                       class="btn btn-xs btn-secondary btn-sm"
                       >View Profile</a
                     >
@@ -321,7 +321,7 @@
               </li>
               <li>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">My Profile</a>
+                <a class="dropdown-item" [routerLink]="'admin/profile'">My Profile</a>
                 <a class="dropdown-item" href="#">My Balance</a>
                 <a class="dropdown-item" href="#">Inbox</a>
                 <div class="dropdown-divider"></div>
