nut login, show name tren header

--- a/admin/src/app/shared/components/header/header.component.html
+++ b/admin/src/app/shared/components/header/header.component.html
@@ -59,7 +59,7 @@
             </form>
           </ul>
         </li>
-        <li class="nav-item topbar-icon dropdown hidden-caret">
+        <!-- <li class="nav-item topbar-icon dropdown hidden-caret">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -276,64 +276,38 @@
               </div>
             </div>
           </div>
+        </li> -->
+<li class="nav-item topbar-user dropdown hidden-caret">
+  <ng-container *ngIf="isLoggedIn; else loginButton">
+    <a class="dropdown-toggle profile-pic" data-bs-toggle="dropdown" href="#" aria-expanded="false">
+      <span class="profile-username">
+        <span class="op-7">Hi,</span>
+        <span class="fw-bold">{{ userName }}</span>
+      </span>
+    </a>
+    <ul class="dropdown-menu dropdown-user animated fadeIn">
+      <div class="dropdown-user-scroll scrollbar-outer">
+        <li>
+          <div class="user-box">
+            <div class="avatar-lg">
+              <img src="assets/img/profile.jpg" alt="image profile" class="avatar-img rounded" />
+            </div>
+            <div class="u-text">
+              <h4>{{ userName }}</h4>
+              <p class="text-muted"></p>
+              <a [routerLink]="['/admin/profile']" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+            </div>
+          </div>
         </li>
+        <li>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#" (click)="logout()">Đăng xuất</a>
+        </li>
+      </div>
+    </ul>
+  </ng-container>
 
-        <li class="nav-item topbar-user dropdown hidden-caret">
-          <a
-            class="dropdown-toggle profile-pic"
-            data-bs-toggle="dropdown"
-            href="#"
-            aria-expanded="false"
-          >
-            <div class="avatar-sm">
-              <img
-                src="assets/img/profile.jpg"
-                alt="..."
-                class="avatar-img rounded-circle"
-              />
-            </div>
-            <span class="profile-username">
-              <span class="op-7">Hi,</span>
-              <span class="fw-bold">Hizrian</span>
-            </span>
-          </a>
-          <ul class="dropdown-menu dropdown-user animated fadeIn">
-            <div class="dropdown-user-scroll scrollbar-outer">
-              <li>
-                <div class="user-box">
-                  <div class="avatar-lg">
-                    <img
-                      src="assets/img/profile.jpg"
-                      alt="image profile"
-                      class="avatar-img rounded"
-                    />
-                  </div>
-                  <div class="u-text">
-                    <h4>Hizrian</h4>
-                    <p class="text-muted"></p>
-                    <a
-                      href="admin/profile"
-                      class="btn btn-xs btn-secondary btn-sm"
-                      >View Profile</a
-                    >
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" [routerLink]="'admin/profile'">My Profile</a>
-                <a class="dropdown-item" href="#">My Balance</a>
-                <a class="dropdown-item" href="#">Inbox</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Account Setting</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
-              </li>
-            </div>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Navbar -->
-</div>
+  <ng-template #loginButton>
+    <a [routerLink]="['/login']" class="btn btn-sm btn-primary">Đăng nhập</a>
+  </ng-template>
+</li>
