--- a/admin/src/app/features/booking/booking.component.html
+++ b/admin/src/app/features/booking/booking.component.html
@@ -17,6 +17,7 @@
   />
 
   <app-booking-status-popup
+    *ngIf="selectedBooking"
     [visible]="isEditPopupOpen"
     [booking]="selectedBooking"
     (onClose)="onClosePopup()"
