--- a/admin/src/app/features/feature/feature-list/feature-list.component.html
+++ b/admin/src/app/features/feature/feature-list/feature-list.component.html
@@ -29,7 +29,7 @@
   <div>
     <ul class="room-children-list">
       <li *ngFor="let item of feature.room_class_used_list">
-        {{ item.room_class_id.name || "(chưa gán)" }}
+        {{ item.room_class.name || "(chưa gán)" }}
       </li>
     </ul>
   </div>
