--- a/admin/src/app/shared/components/common-filter-bar/common-filter-bar.component.html
+++ b/admin/src/app/shared/components/common-filter-bar/common-filter-bar.component.html
@@ -9,7 +9,7 @@
       id="floatingInput"
       placeholder="name@example.com"
       style="width: 100%; padding-right: 30px"
-      [(ngModel)]="filter.keyword"
+      [(ngModel)]="filter.search"
       (keyup.enter)="filterChange.emit()"
     />
     <label for="floatingInput">Tìm kiếm</label>
@@ -38,13 +38,13 @@
   <div>
     <label>Sắp xếp:</label>
     <button (click)="filterChange.emit('status')">
-      Trạng thái: {{ filter.sortOrder === "asc" ? "↑" : "↓" }}
+      Trạng thái: {{ filter.order === "asc" ? "↑" : "↓" }}
     </button>
   </div>
   <div>
     <label>Sắp xếp:</label>
     <button (click)="filterChange.emit('createdAt')">
-      Ngày tạo: {{ filter.sortOrder === "asc" ? "↑" : "↓" }}
+      Ngày tạo: {{ filter.order === "asc" ? "↑" : "↓" }}
     </button>
   </div>
 </div>
