--- a/admin/src/app/features/login/login.component.html
+++ b/admin/src/app/features/login/login.component.html
@@ -1,5 +1,9 @@
 <body>
-  <div class="container" [ngClass]="{ 'show-register': isRegister }" id="mainContainer">
+  <div
+    class="container"
+    [ngClass]="{ 'show-register': isRegister }"
+    id="mainContainer"
+  >
     <!-- Login form -->
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
       <div class="form-container login">
@@ -7,36 +11,45 @@
         <div class="form-group">
           <label>Email</label>
           <input
-                 type="text"
-                 name="email"
-                 id="email"
-                 formControlName="email"
-                 class="form-control"
-                 placeholder="Nhập email"
-                 aria-describedby="namehelpId"
-                 />
+            type="text"
+            name="email"
+            id="email"
+            formControlName="email"
+            class="form-control"
+            placeholder="Nhập email"
+            aria-describedby="namehelpId"
+          />
 
-              <div *ngIf="!loginForm.get('email')?.valid && loginForm.get('email')?.touched">
-                <div class="text-danger alert-dismissible fade show" role="alert">
-                  <strong>Email </strong> không hợp lệ
-                </div>
-              </div>
+          <div
+            *ngIf="
+              !loginForm.get('email')?.valid && loginForm.get('email')?.touched
+            "
+          >
+            <div class="text-danger alert-dismissible fade show" role="alert">
+              <strong>Email </strong> không hợp lệ
+            </div>
+          </div>
         </div>
         <div class="form-group">
           <label>Mật khẩu</label>
           <input
-                 type="password"
-                 name="password"
-                 id="password"
-                 formControlName="password"
-                 class="form-control"
-                 placeholder="Nhập mật khẩu"
-                 aria-describedby="namehelpId"
-                 />
+            type="password"
+            name="password"
+            id="password"
+            formControlName="password"
+            class="form-control"
+            placeholder="Nhập mật khẩu"
+            aria-describedby="namehelpId"
+          />
 
-                <div *ngIf="!loginForm.get('password')?.valid && loginForm.get('password')?.touched">
-                  <div class="text-danger">Mật khẩu tối thiểu 6 ký tự.</div>
-                </div>
+          <div
+            *ngIf="
+              !loginForm.get('password')?.valid &&
+              loginForm.get('password')?.touched
+            "
+          >
+            <div class="text-danger">Mật khẩu tối thiểu 6 ký tự.</div>
+          </div>
         </div>
         <button type="submit" class="btn">Đăng nhập</button>
       </div>
@@ -137,9 +150,8 @@
       <p *ngIf="!isActive">Bạn chưa có tài khoản?</p>
       <p *ngIf="isActive">Bạn đã có tài khoản?</p>
       <button class="toggle-btn" (click)="toggleForm()">
-        {{ isActive ? 'Đăng nhập' : 'Tạo tài khoản' }}
+        {{ isActive ? "Đăng nhập" : "Tạo tài khoản" }}
       </button>
     </div>
   </div>
-
 </body>
