--- a/admin/src/app/features/main-room-class/main-room-class-list/main-room-class-list.component.html
+++ b/admin/src/app/features/main-room-class/main-room-class-list/main-room-class-list.component.html
@@ -31,7 +31,7 @@
       <input
         type="checkbox"
         [checked]="mainRoomClass.status"
-        (change)="toggleStatus.emit({ mainRoomClass, $event })"
+        (change)="toggleStatus.emit({ $event, mainRoomClass })"
       />
       <span class="slider"></span>
     </label>
